# Findr

./: .gitignore  CLAUDE.md  README.md  package.json
apps/api/: .env.example  .gitignore  drizzle.config.ts  package.json  tsconfig.json
apps/api/scripts/: build.ts  cartographer.ts
apps/api/src/: config.json  index.ts
apps/api/src/lib/auth/: client.ts
apps/api/src/lib/db/: client.ts
apps/api/src/lib/jobs/: JobHandler.ts  JobQueue.ts  Jobline.ts  README.md
apps/api/src/lib/other/: Encoders.ts  Pipeline.ts  SelfManagedSingleton.ts
apps/api/src/lib/routing/: derivePath.ts  factory.ts  methods.ts
apps/api/src/lib/server/: Server.ts
apps/api/src/middleware/: requireAuth.ts  validateBody.ts
apps/api/src/routes/: health.ts
apps/api/src/routes/auth/: [...index].ts
apps/api/src/routes/indexes/: index.ts
apps/api/src/routes/jobs/: create.ts  index.ts
apps/api/src/types/: Jobline.ts  Route.ts
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: index.css  main.tsx
apps/web/src/components/: app-header.tsx  index-dialog.tsx  job-list.tsx  login-form.tsx  media-card.tsx  media-detail-dialog.tsx  search-dialog.tsx  signup-form.tsx  stat-card.tsx
apps/web/src/hooks/: use-tmdb-search.ts  use-tmdb-trending.ts
apps/web/src/lib/: auth.ts
apps/web/src/routes/: discover.tsx  home.tsx  jobs.tsx  login.tsx  signup.tsx
docs/: Config.md  Video_Re-Encoding.md
scripts/: build.ts
tools/therarbg-cli/: BUILD.md  Cargo.toml  build.ts
tools/therarbg-cli/src/: main.rs  scraper.rs
(+11 files in other folders)
